welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: value x
  x = 0
  ^Methods:5: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  }prendBiscuit()
   ^Methods:6: error: not found: value x
  for(compteur <-1 to x){
                      ^Methods:8: error: value poseBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value poseBiscuit'?
  }poseBiscuit()
   ^